--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GitHubSearch</string>
+    <string name="title_txt">GitHubSearch</string>
+    <string name="hint_txt">Nome do usuário </string>
+    <string name="confirm_btn_text">Confirmar</string>
 </resources>
